--- a/DockerMultiProfileDemo/appsettings.json
+++ b/DockerMultiProfileDemo/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5432;Database=dockermultiprofiledemo;Username=postgres;Password=postgres;Include Error Detail=true",
+    "Docker": "Host=dockermultiprofiledemo.db;Port=5432;Database=dockermultiprofiledemo;Username=postgres;Password=postgres;Include Error Detail=true"
+  }
 }
