--- a/docker-compose.release.yml
+++ b/docker-compose.release.yml
@@ -12,8 +12,8 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.dockermultiprofiledemo.rule=Host(`myapp.local`)
-      - traefik.http.routers.dockermultiprofiledemo.entrypoints=websecure
-      - traefik.http.routers.dockermultiprofiledemo.tls=true
+      # - traefik.http.routers.dockermultiprofiledemo.entrypoints=websecure
+      # - traefik.http.routers.dockermultiprofiledemo.tls=true
       - traefik.http.services.dockermultiprofiledemo.loadbalancer.server.port=8080
 
   dockermultiprofiledemo.db:
@@ -26,22 +26,22 @@ services:
     image: traefik:v3.1.2
     ports:
       - 80:80
-      - 443:443
+      # - 443:443
     networks:
       - proxy
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - letsencrypt:/letsencrypt
+      # - letsencrypt:/letsencrypt
     command:
-      - --api.dashboard=true
-      - --log.level=INFO
-      - --accesslog=true
+      # - --api.dashboard=true
+      # - --log.level=INFO
+      # - --accesslog=true
       - --providers.docker.network=proxy
-      - --providers.docker.exposedByDefault=false
+      # - --providers.docker.exposedByDefault=false
       - --entrypoints.web.address=:80
-      - --entrypoints.web.http.redirections.entrypoint.to=websecure
-      - --entryPoints.web.http.redirections.entrypoint.scheme=https
-      - --entrypoints.websecure.address=:443
+      # - --entrypoints.web.http.redirections.entrypoint.to=websecure
+      # - --entryPoints.web.http.redirections.entrypoint.scheme=https
+      # - --entrypoints.websecure.address=:443
       # Comment out or remove ACME settings
       # - --entrypoints.websecure.http.tls.certresolver=myresolver
       # - --certificatesresolvers.myresolver.acme.email=your-email@gmail.com
@@ -50,22 +50,22 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.mydashboard.rule=Host(`myapp.local`)
-      - traefik.http.routers.mydashboard.service=api@internal
-      - traefik.http.routers.mydashboard.middlewares=myauth
-      - traefik.http.middlewares.myauth.basicauth.users=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/
+      # - traefik.http.routers.mydashboard.service=api@internal
+      # - traefik.http.routers.mydashboard.middlewares=myauth
+      # - traefik.http.middlewares.myauth.basicauth.users=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/
 
-  whoami:
-    container_name: whoami
-    image: traefik/whoami:v1.8
-    networks:
-      - proxy
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.mywhoami.rule=Host(`whoami.local`)
-      - traefik.http.services.mywhoami.loadbalancer.server.port=80
-      - traefik.http.middlewares.mywwwredirect.redirectregex.regex=^https://www\.(.*)
-      - traefik.http.middlewares.mywwwredirect.redirectregex.replacement=https://$${1}
-      - traefik.http.routers.mywhoami.middlewares=mywwwredirect
+  # whoami:
+  #   container_name: whoami
+  #   image: traefik/whoami:v1.8
+  #   networks:
+  #     - proxy
+  #   labels:
+  #     - traefik.enable=true
+  #     - traefik.http.routers.mywhoami.rule=Host(`whoami.local`)
+  #     - traefik.http.services.mywhoami.loadbalancer.server.port=80
+  #     - traefik.http.middlewares.mywwwredirect.redirectregex.regex=^https://www\.(.*)
+  #     - traefik.http.middlewares.mywwwredirect.redirectregex.replacement=https://$${1}
+  #     - traefik.http.routers.mywhoami.middlewares=mywwwredirect
 
 networks:
   proxy:
