--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 POSTGRES_DB=dockermultiprofiledemo
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-DOMAIN_APP=myapp.local
+DOMAIN_NAME=myapp.local
