--- a/DockerMultiProfileDemo/appsettings.json
+++ b/DockerMultiProfileDemo/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=dockermultiprofiledemo;Username=postgres;Password=postgres;Include Error Detail=true",
-    "Docker": "Host=dockermultiprofiledemo.db;Port=5432;Database=dockermultiprofiledemo;Username=postgres;Password=postgres;Include Error Detail=true"
+    "DefaultDb": "Host=localhost;Port=5432;Database=dockermultiprofiledemo;Username=postgres;Password=postgres;Include Error Detail=true",
+    "DockerDb": "Host=dockermultiprofiledemo.db;Port=5432;Database=dockermultiprofiledemo;Username=postgres;Password=postgres;Include Error Detail=true",
+    "DefaultCache": "dockermultiprofiledemo.cache:6379"
   }
 }
