--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ POSTGRES_DB=dockermultiprofiledemo
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 DOMAIN_NAME=myapp.local
+OTPLKEY=1234
+ASPIRE_BROWSER_TOKEN=1234
