--- a/DockerMultiProfileDemo/DockerMultiProfileDemo.csproj
+++ b/DockerMultiProfileDemo/DockerMultiProfileDemo.csproj
@@ -24,8 +24,16 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
-	<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.6" />
+	<PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.2" />
+	<PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.9.0" />
+	<PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.9.0" />
+	<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.9.0" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.9.0" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.9.0" />
+	<PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.0.0-beta.10" />
+	<PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.8.0" />
   </ItemGroup>
 
 </Project>
