setup redis for non docker env

--- a/DockerMultiProfileDemo/appsettings.json
+++ b/DockerMultiProfileDemo/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "DefaultDb": "Host=localhost;Port=5432;Database=dockermultiprofiledemo;Username=postgres;Password=postgres;Include Error Detail=true",
     "DockerDb": "Host=dockermultiprofiledemo.db;Port=5432;Database=dockermultiprofiledemo;Username=postgres;Password=postgres;Include Error Detail=true",
-    "DefaultCache": "dockermultiprofiledemo.cache:6379"
+    "DefaultCache": "localhost:6379",
+    "DockerCache": "dockermultiprofiledemo.cache:6379"
   }
 }
