--- a/.env
+++ b/.env
@@ -2,5 +2,7 @@ POSTGRES_DB=dockermultiprofiledemo
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 DOMAIN_NAME=myapp.local
+DOMAIN_PYTHON_PREFIX=python
+DOMAIN_CSHARP_PREFIX=csharp
 OTPLKEY=1234
 ASPIRE_BROWSER_TOKEN=1234
