--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,6 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /.containers/dockermultiprofiledemo-db
+
+/PythonProject/.venv
+/PythonProject/.idea
