--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -12,8 +12,12 @@ services:
   dockermultiprofiledemo.db:
     container_name: dockermultiprofiledemo.db.dev
     ports:
-      - 5432:5432 
+      - "5432:5432" 
   
   dockermultiprofiledemo.cache:
     ports:
       - '6379:6379'
+
+  pythonproject:
+    ports:
+      - "4949:4949"
