add installer scripts

--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ POSTGRES_PASSWORD=postgres
 DOMAIN_NAME=myapp.local
 DOMAIN_PYTHON_PREFIX=python
 DOMAIN_CSHARP_PREFIX=csharp
+DOMAIN_DASHBOARD_PREFIX=dashboard
 OTPLKEY=1234
 ASPIRE_BROWSER_TOKEN=1234
