--- a/docker-compose.release.yml
+++ b/docker-compose.release.yml
@@ -54,7 +54,7 @@ services:
      - proxy
     labels:
       - traefik.enable=true
-      - traefik.http.routers.dashboard.rule=Host(`dashboard.${DOMAIN_NAME}`)
+      - traefik.http.routers.dashboard.rule=Host(`${DOMAIN_DASHBOARD_PREFIX}.${DOMAIN_NAME}`)
       - traefik.http.services.dashboard.loadbalancer.server.port=18888
   
   pythonproject:
